src/web/snapshots/rustlog__web__tests__v2_openapi.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /api/v2/openapi.json
status: 200 OK
content-type: application/json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
<body omitted>
