src/web/snapshots/rustlog__web__tests__v2_resolve.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /api/v2/users/resolve?login=testchan
status: 503 Service Unavailable
content-type: application/problem+json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "The Twitch token is not ready"
}
