src/web/snapshots/rustlog__web__tests__v2_root_trailing_slash.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /api/v2/
status: 404 Not Found
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
